feat: list entity creation
