# docs/swagger.json
@@ -16,9 +16,6 @@
         "/healthz": {
             "get": {
                 "description": "Health Checking for API services",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -32,9 +29,58 @@
                     }
                 }
             }
+        },
+        "/lists": {
+            "post": {
+                "description": "Create a single List",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "Create List",
+                "parameters": [
+                    {
+                        "description": "Create List",
+                        "name": "list",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateListInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/dto.List"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "dto.CreateListInput": {
+            "type": "object",
+            "required": [
+                "description",
+                "title"
+            ],
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "priority": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.HealthzResult": {
             "type": "object",
             "properties": {
@@ -69,6 +115,23 @@
             "properties": {
                 "db": {
                     "$ref": "#/definitions/dto.HealthzResultDetail"
+                }
+            }
+        },
+        "dto.List": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "priority": {
+                    "type": "integer"
+                },
+                "title": {
+                    "type": "string"
                 }
             }
         }
