# internal/pkg/list/dto/update_list.go
@@ -1,0 +1,6 @@
+package dto
+
+type UpdateListInput struct {
+	ID uint `json:"id" validate:"required"`
+	CreateListInput
+}
